fix the multi-plugin menu button alignment hack

--- a/assets/stylesheets/quick.scss
+++ b/assets/stylesheets/quick.scss
@@ -1,5 +1,8 @@
 .plugin-menu-icons {
   float: left;
+  > li {
+    display: inline-block;
+  }
 }
 
 .messages-button-wrapper {
